udpate input box

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <div class="input-box">
         <input type="password" placeholder="Enter Password">
+        <img src="images/closed-eyes.png" >
     </div>
 </body>
 </html>
