--- a/index.html
+++ b/index.html
@@ -9,8 +9,21 @@
 </head>
 <body>
     <div class="input-box">
-        <input type="password" placeholder="Enter Password">
-        <img src="images/closed-eyes.png" >
+        <input type="password" placeholder="Enter Password" id="password">
+        <img src="images/closed-eyes.png" id="eyeIcon">
     </div>
+    <script>
+        let eyeIcon= document.getElementById("eyeIcon");
+        let password= document.getElementById("password");
+        eyeIcon.onclick = function(){
+            if(password.type == "password"){
+                password.type = "text";
+                eyeIcon.src="images/visibility.png"
+            }else{
+                password.type = "password";
+                eyeIcon.src="images/closed-eyes.png"
+            }
+        }
+    </script>
 </body>
 </html>
